[tool.poetry]
name = "data_visulizat"
version = "0.1.0"
description = ""
authors = ["AbdullahELian1 <abodelian28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.2"
jupyterlab = "^3.1.4"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
